foreword-yanshin, chapter-01: Daily commit.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -1,3 +1,13 @@
+@article { pavlov1922lednikovye,
+  title = {Ледниковые и межледниковые эпохи Европы в связи с историей
+  	ископаемого человека},
+  author = {Алексей Петрович Павлов},
+  journal = {Академическая речь},
+  number = {2},
+  year = {1922},
+  hyphenation = {russian},
+}
+
 @book { schuchert1933geology,
   title = {A Text Book of Geology},
   author = {Charles Schuchert and Carl Owen Dunbar},
@@ -299,4 +309,50 @@
   userb = {The Unknown Vernadsky},
   author = {Ф. Лукьянов},
   date = {1988-09-29},
+}
+
+@book { belyaev1966donnaya,
+  title = {Донная фауна найбольших глубин (ультраабиссали) Мирового океана},
+  author = {Беляев, Георгий Михайлович},
+  lccn = {67037470},
+  url = {http://books.google.com/books?id=G0Y_AAAAYAAJ},
+  year = {1966},
+  publisher = {Наука},
+  hyphenation = {russian},
+}
+
+@book { belayev1989glubokovodnye,
+  title = {Глубоководные океанические желоба и их фауна},
+  author = {Беляев, Георгий Михайлович},
+  editor = {М. Е. Виноградов},
+  url = {http://www.biblus.ru/Default.aspx?book=555b0a1f4},
+  year = {1989},
+  publisher = {Наука},
+  hyphenation = {russian},
+}
+
+@book { carus1913prirode,
+  title = {О природе вещей},
+  author = {Тит Лукре́ций Кар},
+  year = {1913},
+  hyphenation = {russian},
+}
+
+@book { carus1936prirode,
+  title = {О природе вещей},
+  author = {Тит Лукре́ций Кар},
+  year = {1936},
+  translator = {Ф. А. Петровский},
+  url = {http://www.nsu.ru/classics/bibliotheca/lucretius.htm},
+  hyphenation = {russian},
+}
+
+@book { carus1851nature,
+  title = {On the Nature of Things},
+  author = {Titus Lucretius Carus},
+  origtitle = {De rerum natura},
+  translator = {John Selby Watson},
+  url = {http://books.google.com/books?id=intROeJdmdMC},
+  year = {1851},
+  publisher = {H.G. Bohn},  
 }
