--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -128,6 +128,9 @@ life.
 
 
 \Section % 3
+% Living matter is in a state of organization, which is determining for the
+% biosphere.  Living matter's cosmic significance, and the constantly
+% increasing extent of the biosphere.
 Man, like every living natural (or naturally occurring)\footnoteRus{природное
 (или естественное)} body, is inseparably connected with a certain geological
 envelope of our planet---\emph{the biosphere}, clearly distinct from the rest
@@ -163,11 +166,72 @@ atoms}\footnoteRus{биогенный ток атомов} creates the biosphere
 extent.  The biosphere is thus connected inseparably and inherently with the
 living matter populating it throughout the whole duration of geological time.
 
-. . .
+The planetary, cosmic significance of living matter is distinctly expressed in
+this biogenic flow of atoms, and in the energy connected with it.  That, since
+the biosphere is that single envelope of the Earth, in which cosmic energy,
+cosmic radiation, mainly radiation from the Sun, which maintains the dynamic
+equilibrium, the state of organization: $\mathrm{biosphere} \leftrightarrow
+\mathrm{living matter}$, constantly penetrates.
+
+The biosphere stretches from the surface of the geoid up to the boundary of the
+stratosphere, penetrating in it; it, however, would be unlikely to be able to
+reach the ionosphere---the Earth's electromagnetic vacuum, which is just now
+entering the scientific consciousness.  Living matter reaches below the surface
+of the geoid into the stratisphere, and into the top regions of the
+metamorphic, and of the granitic envelope.  It rises up to
+20--$25\,\mathrm{km}$ above the surface of the geoid, and extends down to
+4--$5\,\mathrm{km}$ below that level on average.  These boundaries change in
+the course of time, and, there are places of, it is true, small extent where
+they are far beyond these.  Apparently, living matter must reach deeper than
+$11\,\mathrm{km}$ at places in the depths of the ocean, and its presence has
+been established deeper than $6\,\mathrm{km}$.\footnoteEd{
+	Ocean floor organisms have indeed been observed at all depths of the
+	world ocean, including at greater than $11\,\mathrm{km}$.  (See
+	\foreignlanguage{russian}{\cites{belyaev1966donnaya}{belayev1989glubokovodnye}}.)
+	[---Ed.]
+}  We are just now living through the penetration of mankind, always
+inseparable from other organisms---insects, plants, microbes,---into the
+stratosphere, and by this means living matter has already exceeded
+$40\,\mathrm{km}$ above the surface of the geoid, and is quiclky rising.
+
+Apparently, a process of incessant expansion of the boundaries of the
+biosphere: its population with living matter, is observable in the course of
+geological time.
+
 
 \Section % 4
+\emph{The state of organization of the biosphere}---the state of organization
+of living matter---must be viewed as an equilibrium, which is changeable,
+always oscillating around a precisely expressible mean, not in historical, but
+in geological time.  The shifts, or oscillations of this mean are constantly
+manifested not in historical, but rather in geological time.  In the course of
+geological time, in the cyclical processes which are characteristic of the
+biogeochemical state of organization, no point (for example, atom or chemical
+element) ever returns to a position identical with a previous one for eons.
 
-. . .
+This characteristic of the biosphere was expressed very prominently and vividly
+by Leibnitz[1646--1716] in one of his philosophical reflections, it seems to
+me, in the \rtitle{Theodicy}\nocite{leibnitz1985theodicy,
+leibnitz1900oeuvres-v2}.  He was among a large company from the high society in
+a large garden, he recounts, at the end of the $18^\mathrm{th}$ c., and
+Leibniz, speaking of the infinite variety of nature, and of the infinite
+perfectability of the mind's precision,\footnoteRus{бесконечной четкости ума}
+indicated that two leaves of any tree or plant are never completely identical.
+All efforts of the large company to find such leaves were, of course, in vain.
+Leibniz was reflecting here not as an observer of nature, discovering this
+phenomenon for the first time, but as en erudite, taking it from his readings.
+It is possible to trace that precisely this example of the leaves appeared in
+philosophical folklore centuries earlier.\footnote{
+	See, for example, \cite[кн.~2,
+	с.~54]{carus1913prirode}\nocite{carus1936prirode, carus1851nature}.}
+
+This is manifested for us in everyday life in
+\emph{identity},\footnoteRus{личности} in the absence of two identical
+individuals, indistinguishable from one another.  It is manifested in biology
+in the fact that every mean \emph{individuum}\footnoteRus{индивидуум} of living
+matter is \emph{chemically distinct} in its chemical compounds, as, obviously,
+also in its chemical elements having \emph{their own} specific compounds.
+
 
 \Section % 5
 
