--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -154,4 +154,19 @@ face of the whole Earth, of all of its nature in the physico-geographical and
 chemical aspect.  (V.~I.\ Vernadsky didn't yet use the term `biosphere' at that
 time.)
 
+Such thougts occurred not only to V.~I.\ Vernadsky, and he mentions his
+predicessors and contemporaries in this aspect in his later works with his
+characteristic courtesy.\footnoteRus{щепетильностью}  The American geologist
+Charles Schuchert proposed viewing the contemporary epoch as the beginning of a
+new, psychozoic age of the history of the Earth, emphasizing the significance
+of the psychological activity of mankind as a geological factor with this name,
+in 1933.\footcite[80]{schuchert1933geology}  Our Russian scientist A.~P.\
+Pavlov, who invited V.~I.\ Vernadsky to teach mineralogy at Moscow
+University in 1890, also thought that a new geological period in the Earth's
+history began with the appearance of man on it, which he proposed to call
+anthropogenic (from the Greek word
+`anthropos'---man).\footcite{pavlov1922lednikovye}  There were also other
+statements of similar character at the end of the past, and the beginning of
+the present century.
+
 . . .
