--- a/tex/thought.tex
+++ b/tex/thought.tex
@@ -30,6 +30,7 @@
 
 % Load bibliography databases:
 \addbibresource{bib/vernadsky.bib}
+\addbibresource{bib/leibnitz.bib}
 \addbibresource{bib/thought.bib}
 
 
