authortitle-trans.cbx: Added commands for numeric references.  chapter-01.tex, foreword-yanshin.tex: Daily commit.

--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -1,3 +1,114 @@
+% Resource: <http://vernadsky.lib.ru/biblio/database/books-1863-1917.bib>.
+
+@online { vernadsky1891mineralogy-1,
+  title = {I-я лекция по минералогии на медицинском факультете},
+  author = {Владимир Иванович Вернадский},
+  year = {1891},
+  url = {http://www.ras.ru/vivernadskyarchive/1_actview.aspx?id=155},
+  language = {russian},
+  hyphenation = {russian},
+}
+
+@book { vernadsky1891mineralogy,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Краткий курс минералогии, читанный студентам-медикам в
+	  1891--1892 гг.},
+  publisher = 	 {Изд-во Моск. ун-та},
+  year = 	 {1891},
+  address = 	 {Москва},
+  pagetotal =	 {158},
+  note = 	 {Литогр. изд.},
+  language = 	 {russian},
+  hyphenation =	 {russian},
+}
+
+@book { vernadsky1898mineralogy,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Лекции по минералогии, читанные студентам-медикам в
+	  1897--1898 гг.},
+  publisher = 	 {Изд-е студентов},
+  year = 	 {1898},
+  address = 	 {Москва},
+  pagetotal =	 {144},
+  note = 	 {Литогр. изд.},
+  language = 	 {russian},
+  hyphenation =	 {russian},
+}
+
+@book { vernadsky1899mineralogy,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Лекции описательной минералогии: (Чит. в Моск. ун-те)},
+  publisher = 	 {Типо-литогр. Рихтера},
+  year = 	 {1899},
+  address = 	 {Москва},
+  pagetotal = 	 {288},
+  language = 	 {russian},
+  hyphenation =	 {russian},
+}
+
+@book { vernadsky1900mineralogy,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Лекции по минералогии, читанные студентам-медикам в 1900 г.},
+  publisher = 	 {Изд-во Моск. ун-та},
+  year = 	 {1900},
+  address = 	 {Москва},
+  pagetotal = 	 {133},
+  language = 	 {russian},
+  hyphenation =	 {russian},
+}
+
+@book { vernadsky1906mineralogy,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Минералогия и кристаллография: Лекции для студентов мед. фак.
+	  Моск. ун-та.},
+  publisher = 	 {Изд-во Моск. ун-та},
+  year = 	 {1906},
+  address = 	 {Москва},
+  pagetotal = 	 {134},
+  language = 	 {russian},
+  hyphenation =	 {russian},
+}
+
+@book { vernadsky1908mineralogy,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Минералогия: Лекции, чит. студентам-естественникам Моск.
+	  ун-та в 1907--1908 гг.},
+  publisher = 	 {Изд-во Моск. ун-та},
+  year = 	 {1908},
+  volume =	 {1},
+  address = 	 {Москва},
+  pagetotal =	 {472},
+  note = 	 {Литогр. изд.},
+  language = 	 {russian},
+  hyphenation =	 {russian},
+}
+
+@mvbook { vernadsky1910mineralogy-v1,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Минералогия. Лекции.},
+  publisher = 	 {Изд-во Моcк ун-та},
+  year = 	 {1910},
+  volume = 	 {1},
+  address = 	 {Москва},
+  edition = 	 {3},
+  pagetotal = 	 {344},
+  language = 	 {russian},
+  hyphenation =	 {russian},
+}
+
+@mvbook { vernadsky1910mineralogy-v2,
+  author =	 {Владимир Иванович Вернадский},
+  title = 	 {Минералогия. Лекции.},
+  publisher = 	 {Изд-во Моcк ун-та},
+  year = 	 {1910},
+  volume = 	 {2},
+  address = 	 {Москва},
+  edition = 	 {2},
+  pagetotal = 	 {163},
+  language = 	 {russian},
+  hyphenation =	 {russian},
+}
+
 @inbook { vernadsky1926biosfera,
   title = {Биосфера},
   year = {1926},
