--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -211,17 +211,18 @@ element) ever returns to a position identical with a previous one for eons.
 
 This characteristic of the biosphere was expressed very prominently and vividly
 by Leibnitz[1646--1716] in one of his philosophical reflections, it seems to
-me, in the \rtitle{Theodicy}\nocite{leibnitz1985theodicy,
-leibnitz1900oeuvres-v2}.  He was among a large company from the high society in
-a large garden, he recounts, at the end of the $18^\mathrm{th}$ c., and
-Leibniz, speaking of the infinite variety of nature, and of the infinite
-perfectability of the mind's precision,\footnoteRus{бесконечной четкости ума}
-indicated that two leaves of any tree or plant are never completely identical.
-All efforts of the large company to find such leaves were, of course, in vain.
-Leibniz was reflecting here not as an observer of nature, discovering this
-phenomenon for the first time, but as en erudite, taking it from his readings.
-It is possible to trace that precisely this example of the leaves appeared in
-philosophical folklore centuries earlier.\footnote{
+me, in the \rtitle{Theodicy}.\footnoteTransl{
+	See \refsmartcite{leibnitz1985theodicy, leibnitz1900oeuvres-v2}.
+}  He was among a large company from the high society in a large garden, he
+recounts, at the end of the $18^\mathrm{th}$ c., and Leibniz, speaking of the
+infinite variety of nature, and of the infinite perfectability of the mind's
+precision,\footnoteRus{бесконечной четкости ума} indicated that two leaves of
+any tree or plant are never completely identical.  All efforts of the large
+company to find such leaves were, of course, in vain.  Leibniz was reflecting
+here not as an observer of nature, discovering this phenomenon for the first
+time, but as en erudite, taking it from his readings.  It is possible to trace
+that precisely this example of the leaves appeared in philosophical folklore
+centuries earlier.\footnote{
 	See, for example, \cite[кн.~2,
 	с.~54]{carus1913prirode}\nocite{carus1936prirode, carus1851nature}.}
 
@@ -234,8 +235,46 @@ also in its chemical elements having \emph{their own} specific compounds.
 
 
 \Section % 5
+% The heterogeneity of the biosphere.  The connection between living and inert
+% matter.
+Especially characteristic in the structure of \emph{the biosphere is its
+physical-chemical, and geometric \emph{(\autoref{sec:47})} heterogeneity}.  It
+consists of living and inert matter, which are sharply separate in their
+genesis and structure throughout all of geological time.  Living organisms,
+\ie\ all living matter, are born from living matter, form generations in the
+course of time, which never arise directly, outside of such a living organism,
+from any possible inert matter on the planet.  There is, however, an inherent,
+unceasing connection\footnoteRus{непрерывная, никогда не прекращающаяся связь}
+between inert and living matter, which can be expressed as an incessant
+biogenic flow of atoms from the living matter into the inert matter of the
+biosphere, and vice versa.  This biogenic flow of atoms is originated by living
+matter.  It is expressed in its always unceasing breathing, feeding,
+reproduction, etc.
 
-. . .
+This heterogeneity in the biosphere, unceasing during all geological time, is
+the main dominant factor, strongly distinguishing it from all other envelopes
+of the globe.
+
+It goes deeper than the phenomena usually studied in natural science---to the
+properties of space-time, which scientific thought has approached only in our
+time, in the $20^\mathrm{th}$ c.
+
+Living matter encompasses the whole biosphere, creates it, and changes it, but
+amounts to a small part of it by mass, and by volume.  Inert, non-living matter
+is strongly dominant; greatly diluted gases dominate by volume, hard rocks,
+and, to a lesser degree, the liquid salt water of the world ocean---by mass.
+Living matter, even in the greatest concentrations, in exceptional cases with
+insignificant masses, amounts to tens of percent of the biosphere's matter, and
+amounts to hardly one--two hundredths of a percent by mass on average.
+Geologically, however, it is the greatest force in the biosphere, and
+determines, as we can see, all processes occurring in it, and accumulates vast
+free energy, creating the main geologically manifesting force in the biosphere,
+whose power still cannot be quantitatively determined, but, possibly, exceeds
+all other geological manifestations in the biosphere.
+
+In connection with this, it is convenient to introduce a few basic concepts
+which we will be dealing with in all of the following exposition.
+
 
 \Section \label{sec:6} % 6
 
