--- a/tex/chapter-03.tex
+++ b/tex/chapter-03.tex
@@ -5,7 +5,7 @@ of scientific work, change in the understanding of the fundamentals of reality,
 ecumenicism, and efficient, social manifestation of science.}
 
 
-\Section % 47
+\Section \label{sec:47}
 What is presently occurring in the scientific movement can only be compared
 with that scientific movement from the past of science, which was connected
 with the birth of Greek philosophy and science in the 6th--7th c.~BC.
