--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -169,4 +169,18 @@ anthropogenic (from the Greek word
 statements of similar character at the end of the past, and the beginning of
 the present century.
 
+However, V.~I.\ Vernadsky, not satisfied with general statements, began
+dilligent labor on a quantitative estimate of the scale of human activity.
+V.~I.\ Vernadsky noted the minerals and new chemical compounds formed as a
+result of mankind's industrial activity, and gave the first estimates of the
+total volume and mass of such `technogenic' minerals already in his
+\rtitle{Mineralogy} courses,\footnoteTransl{
+	See \refsmartcites{vernadsky1891mineralogy-1,
+	vernadsky1891mineralogy, vernadsky1898mineralogy,
+	vernadsky1899mineralogy, vernadsky1900mineralogy,
+	vernadsky1906mineralogy, vernadsky1908mineralogy,
+	vernadsky1910mineralogy-v1, vernadsky1910mineralogy-v2}.
+} which were being republished, with additions every time, during the years of
+his work at Moscow University (between 1891 and 1912).
+
 . . .
