chapter-01, foreword-yanshin: Daily commit.

--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -83,6 +83,21 @@
   hyphenation =	 {russian},
 }
 
+@mvbook { vernadsky1909opyt-v2,
+  author =	{Владимир Иванович Вернадский},
+  booktitle =	{Опыт описательной минералогии},
+  title =	{Самородные элементы},
+  volume =	{1}, % Т.
+  number =	{2}, % Вып.
+  year =	{1909},
+  publisher =	{Типографiя императорской академiи наук},
+  pagetotal =	{164},
+  url =		{http://nasledie.enip.ras.ru/ras/view/publication/general.html?id=42070401},
+  urldate =	{2012-07-24},
+  language =	{russian},
+  hyphenation =	{russian},
+}
+
 @mvbook { vernadsky1910mineralogy-v1,
   author =	 {Владимир Иванович Вернадский},
   title = 	 {Минералогия. Лекции.},
@@ -96,6 +111,21 @@
   hyphenation =	 {russian},
 }
 
+@mvbook { vernadsky1910opyt-v3,
+  author =	{Владимир Иванович Вернадский},
+  booktitle =	{Опыт описательной минералогии},
+  title =	{Самородные элементы},
+  volume =	{1}, % Т.
+  number =	{3}, % Вып.
+  publisher =	{Типографiя императорской академiи наук},
+  year =	{1910},
+  pagetotal =	{166},
+  url =		{http://nasledie.enip.ras.ru/ras/view/publication/general.html?id=42070433},
+  urldate =	{2012-07-24},
+  language =	{russian},
+  hyphenation =	{russian},
+}
+
 @mvbook { vernadsky1910mineralogy-v2,
   author =	 {Владимир Иванович Вернадский},
   title = 	 {Минералогия. Лекции.},
@@ -107,6 +137,36 @@
   pagetotal = 	 {163},
   language = 	 {russian},
   hyphenation =	 {russian},
+}
+
+@mvbook { vernadsky1912opyt-v4,
+  author =	{Владимир Иванович Вернадский},
+  booktitle =	{Опыт описательной минералогии},
+  title =	{Самородные элементы},
+  volume =	{1}, % Т.
+  number =	{4}, % Вып.
+  publisher =	{Типографiя императорской академiи наук},
+  year =	{1912},
+  pagetotal =	{165},
+  url =		{http://nasledie.enip.ras.ru/ras/view/publication/general.html?id=42041338},
+  urldate =	{2012-07-24},
+  language =	{russian},
+  hyphenation =	{russian},
+}
+
+@mvbook { vernadsky1914opyt-v5,
+  author =	{Владимир Иванович Вернадский},
+  booktitle =	{Опыт описательной минералогии},
+  title =	{Самородные элементы},
+  volume =	{1}, % Т.
+  number =	{5}, % Вып.
+  publisher =	{Типографiя императорской академiи наук},
+  year =	{1914},
+  pagetotal =	{201},
+  url =		{http://nasledie.enip.ras.ru/ras/view/publication/general.html?id=42070424},
+  urldate =	{2012-07-24},
+  language =	{russian},
+  hyphenation =	{russian},
 }
 
 @inbook { vernadsky1926biosfera,
@@ -278,13 +338,93 @@
   publisher = {Изд-во Академии наук СССР},
 }
 
-@mvbook { vernadsky1954sochineniya,
+@mvbook { vernadsky1954sochineniya-v1,
+  author =	 {Владимир Иванович Вернадский},
+  maintitle = 	 {Избранные сочинения},
+  booktitle =	 {Очерки геохимии и статьи по геохимии и радиологии},
+  publisher = 	 {Изд-во АН СССР},
+  year = 	 {1954},
+  volume = 	 {1},
+  location = 	 {Москва},
+  pagetotal = 	 {696},
+  hyphenation =	 {russian},
+}
+
+@inbook { vernadsky1954sochineniya-himicheskie,
+  crossref = {vernadsky1954sochineniya-v1},
   title = {Химические элементы, их класификация},
-  series = {Избранные сочинения},
-  author = {Владимир Иванович Вернадский},
-  volume = {1},
+  pages = {50},
   year = {1954},
   hyphenation = {russian},
+}
+
+@mvbook { vernadsky1955sochineniya-v2,
+  author =	 {Владимир Иванович Вернадский},
+  maintitle = 	 {Избранные сочинения},
+  booktitle =	 {Опыт описательной минералогии},
+  booksubtitle = {Самородные элементы},
+  publisher = 	 {Изд-во АН СССР},
+  year = 	 {1955},
+  volume = 	 {2},
+  number =	 {1},
+  location = 	 {Москва},
+  pagetotal = 	 {615},
+  hyphenation =	 {russian},
+}
+
+@mvbook { vernadsky1959sochineniya-v3,
+  author =	 {Владимир Иванович Вернадский},
+  maintitle = 	 {Избранные сочинения},
+  booktitle =	 {Опыт описательной минералогии},
+  booksubtitle = {Сернистые и селенистые соединения},
+  publisher = 	 {Изд-во АН СССР},
+  year = 	 {1959},
+  volume = 	 {3},
+  number =	 {2},
+  location = 	 {Москва},
+  pagetotal = 	 {508},
+  hyphenation =	 {russian},
+}
+
+@mvbook { vernadsky1959sochineniya-v4,
+  author =	 {Владимир Иванович Вернадский},
+  maintitle = 	 {Избранные сочинения},
+  booktitle =	 {Общие вопросы минералогии и история минералов земной коры},
+  publisher = 	 {Изд-во АН СССР},
+  year = 	 {1959},
+  volume = 	 {4},
+  number =	 {1},
+  location = 	 {Москва},
+  pagetotal = 	 {624},
+  hyphenation =	 {russian},
+}
+
+@mvbook { vernadsky1960sochineniya-v4,
+  author =	 {Владимир Иванович Вернадский},
+  maintitle = 	 {Избранные сочинения},
+  booktitle =	 {История минералов земной коры (история природных вод): Статьи
+	  по гидрохимии и геохимии воды; почвы, газы, метеориты и космическая
+	  пыль},
+  publisher = 	 {Изд-во АН СССР},
+  year = 	 {1960},
+  volume = 	 {4},
+  number =	 {2},
+  location = 	 {Москва},
+  pagetotal = 	 {422},
+  hyphenation =	 {russian},
+}
+
+@mvbook { vernadsky1960sochineniya-v5,
+  author =	 {Владимир Иванович Вернадский},
+  maintitle = 	 {Избранные сочинения},
+  booktitle =	 {Биосфера: Статьи по биогеохимии, почвам, газам, метеоритам и
+	  космической пыли},
+  publisher = 	 {Изд-во АН СССР},
+  year = 	 {1960},
+  volume = 	 {5},
+  location = 	 {Москва},
+  pagetotal = 	 {420},
+  hyphenation =	 {russian},
 }
 
 @inbook { vernadsky1965himicheskoe,
