--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -277,8 +277,45 @@ which we will be dealing with in all of the following exposition.
 
 
 \Section \label{sec:6} % 6
+% The concepts of natural body (natural object) and natural phenomenon; living,
+% inert, and bioinert bodies and phenomena; heterogeneity of the biosphere's
+% structure.
+Such are the concepts connected with the concepts of natural body (natural
+object),\footnoteRus{природного тела (природного объекта)} and natural
+phenomenon.\footnoteRus{природного явления}  They have often been referred to
+as naturally occurring bodies or phenomena.\footnoteRus{естественные тела или
+явления}
 
-. . .
+Living matter is a natural body or phenomenon in the biosphere.  The concepts
+\emph{natural body or natural phenomenon}, little logically studied, are main
+concepts of natural science.  There is no need to delve into their logical
+analysis for our purposes.  These are bodies or phenomena, formed by natural
+processes,---\emph{natural objects}.
+
+Living organisms, living matter, are not the only natural bodies of the
+biosphere, but rather the main mass of the biosphere's matter forms non-living
+bodies or phenomena, which I will be referring to as
+\emph{inert}.\footnoteRus{косными}  Such are, for example, gases, the
+atmosphere, rocks, a chemical element, an atom, quartz, serpentine, etc.
+
+In addition to living and inert natural bodies, a great role in the biosphere
+play its lawful structures, heterogeneous natural bodies, such as soils, silts,
+surface waters, the very biosphere, etc., which consist of living and inert
+natural bodies existing at the same time, forming complex, lawful inert-living
+structures.\footnoteRus{косно-живые структуры}  I will be calling these complex
+natural bodies \emph{bioinert} natural bodies.\footnoteRus{биокосными
+природными телами}
+
+The difference between living and inert natural bodies is so great, as we shall
+see further on, that the transformation of one into the other is never and
+nowhere observed in terrestrial processes; we encounter them nowhere and never
+in scientific work.  As we shall see, such a process is deeper than the
+physical-chemical phenomena known to us.
+
+The related \emph{heterogeneity of the biosphere's structure}, the sharp
+distinction between its matter and its energy in the form of living, and in the
+form of inert natural bodies is its main manifestation.
+
 
 \Section % 7
 
