--- a/tex/chapter-07.tex
+++ b/tex/chapter-07.tex
@@ -168,7 +168,7 @@ nature'', which have not been discovered in their mathematical expression to
 this day, but the task of searching for whose expression was clearly laid out
 already in 1782 by C. Wolf at the St. Petersburg Academy of
 Sciences\footnoteRus{Петербургской Академии наук} at the
-time.\foreignlanguage{russian}{\footcite[50]{vernadsky1954sochineniya}}
+time.\foreignlanguage{russian}{\footcite{vernadsky1954sochineniya-himicheskie}}
 
 Obviously, this biogeochemical energy, in this form, is characteristic of Homo
 sapiens, as well.  It is, as with all other living organisms, a species
