--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -183,4 +183,22 @@ total volume and mass of such `technogenic' minerals already in his
 } which were being republished, with additions every time, during the years of
 his work at Moscow University (between 1891 and 1912).
 
+He started publishing his \rtitle{Опыт описательной минералогии} (\rtitle{Essay
+on Descriptive Mineralogy}),\footnoteTransl{
+	See \refsmartcites{vernadsky1909opyt-v2, vernadsky1910opyt-v3,
+	vernadsky1912opyt-v4, vernadsky1914opyt-v5}.
+} subsequently encompassing all native elements, including gases, as well as
+their sulphuric\footnoteRus{сернистые} and selenious\footnoteRus{селенистые}
+compounds, in 1908.  In these installments, which were later collected in the
+$2^\mathrm{nd}$ and $3^\mathrm{rd}$ volume of \rtitle{V.~I.\ Vernadsky's
+Selected Works} (1955 and 1959),\footnoteTransl{
+	\Ie\ \refsmartcites{vernadsky1955sochineniya-v2,
+	vernadsky1959sochineniya-v3}.
+} in the description of almost each mineral, or its groups, he includes a
+separate section ``Mankind's Work'',\footnoteRus{Труд человека} or ``Mankind's
+Activity'',\footnoteRus{Деятельность человека} in which he gives numbers for
+their global extraction and refining, communicates information about the direct
+and indirect influence of human activity on the formation and distribution of
+one or another mineral or chemical compound (for example, hydrogen sulphide).
+
 . . .
