--- a/tex/thought.tex
+++ b/tex/thought.tex
@@ -49,6 +49,7 @@
 
 % Typeset 'i.e.':
 \newcommand{\ie}{i.$\,$e.}
+\newcommand{\Ie}{I.$\,$e.}
 
 % Typeset titles of works:
 \newcommand{\rtitle}[1]{\emph{#1}}
