foreword-yanshin: Periodic commit.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -1,3 +1,18 @@
+@book { lamarck1802hydrogeologie,
+  author = {Jean-Baptiste Lamarck},
+  title = {Hydrogéologie},
+  subtitle = {ou RECHERCHES sur l'influence qu’ont les eaux sur la surface du
+	globe terrestre; sur les causes de l'existence du bassin des mers, de
+	son déplacement et de son transport successif sur les différens points
+	de la surface de ce globe; enfin sur les changemens que les corps
+	vivans exercent sur la nature et l’état de cette surface},
+  year = {1802},
+  url = {http://lamarck.in2p3.fr/ouvrages/docpdf/Hydrogeologie.pdf},
+  urldate = {2012-07-30},
+  hyphenation = {french},
+  language = {french},
+}
+
 @article { pavlov1922lednikovye,
   title = {Ледниковые и межледниковые эпохи Европы в связи с историей
   	ископаемого человека},
