--- a/tex/bib/vernadsky.bib
+++ b/tex/bib/vernadsky.bib
@@ -169,6 +169,20 @@
   hyphenation =	{russian},
 }
 
+@mvbook { vernadsky1923istoriya-v1-1,
+  author =	{Владимир Иванович Вернадский},
+  maintitle =	{История минералов земной коры},
+  userd =	{History of the Minerals of the Earth's Crust},
+  location =	{Пг.},
+  number =	{1},
+  volume =	{1},
+  year =	{1923},
+  pagetotal =	{208},
+  publisher =	{Науч. хим.-техн. изд-во},
+  language =	{russian},
+  hyphenation =	{russian},
+}
+
 @inbook { vernadsky1926biosfera,
   title = {Биосфера},
   year = {1926},
@@ -261,6 +275,20 @@
   hyphenation = {french},
 }
 
+@article { vernadsky1927bakteriofag,
+  journal = {Природа},
+  title = {Бактериофаг и скорость передачи жизни в биосфере},
+  author = {Владимир Иванович Вернадский},
+  issn = {0032-874X},
+  year = {1927},
+  number = {6},
+  pages = {433-446},
+  url = {http://www.ras.ru/publishing/nature.aspx},
+  urldate = {2012-07-17},
+  language = {russian},
+  hyphenation = {russian},
+}
+
 @article { vernadsky1927etudes2,
   journal = {Известия Российской академии наук},
   title = {Études biogéochimiques. 2. La vitesse maximum de la transmission de
@@ -277,18 +305,18 @@
   hyphenation = {french},
 }
 
-@article { vernadsky1927bakteriofag,
-  journal = {Природа},
-  title = {Бактериофаг и скорость передачи жизни в биосфере},
-  author = {Владимир Иванович Вернадский},
-  issn = {0032-874X},
-  year = {1927},
-  number = {6},
-  pages = {433-446},
-  url = {http://www.ras.ru/publishing/nature.aspx},
-  urldate = {2012-07-17},
-  language = {russian},
-  hyphenation = {russian},
+@mvbook { vernadsky1927istoriya-v1-2,
+  author =	{Владимир Иванович Вернадский},
+  maintitle =	{История минералов земной коры},
+  userd =	{History of the Minerals of the Earth's Crust},
+  location =	{Л.},
+  publisher = 	{Науч. хим.-техн. изд-во},
+  year =	{1927},
+  volume =	{1},
+  number =	{2},
+  pagetotal =	{167},
+  language =	{russian},
+  hyphenation =	{russian},
 }
 
 @mvbook { vernadsky1930considerations,
@@ -303,6 +331,42 @@
   language = {french},
 }
 
+@mvbook { vernadsky1933istoriya-v2p1-1,
+  author =	{Владимир Иванович Вернадский},
+  maintitle =	{История минералов земной коры},
+  userd =	{History of the Minerals of the Earth's Crust},
+  volume =	{2, Ч.~1},
+  booktitle =	{История природных вод},
+  usera =	{History of Natural Waters},
+  location =	{Л.},
+  publisher =	{Госхимтехиздат},
+  year =	{1933},
+  number =	{1},
+  pagetotal =	{202},
+  hyphenation =	{russian},
+  language =	{russian},
+  url =		{http://www.geolcom.ru/lib/gidrogeologiya/istoriya-mineralov-zemnoi-kory-t-ii-istoriya-prirodnykh-vod-vernadskii-vi.html},
+  urldate =	{2012-07-29},
+}
+
+@mvbook { vernadsky1934istoriya-v2p1-2,
+  author =	{Владимир Иванович Вернадский},
+  maintitle =	{История минералов земной коры},
+  userd =	{History of the Minerals of the Earth's Crust},
+  volume =	{2, Ч.~1},
+  booktitle =	{История природных вод},
+  usera =	{History of Natural Waters},
+  location =	{Л.},
+  publisher =	{ОНТИ Химтеоретиздат},
+  year =	{1934},
+  number =	{2},
+  pagetotal =	{202},
+  hyphenation =	{russian},
+  language =	{russian},
+  url =		{http://www.geolcom.ru/lib/gidrogeologiya/istoriya-mineralov-zemnoi-kory-t-ii-istoriya-prirodnykh-vod-vernadskii-vi.html},
+  urldate =	{2012-07-29},
+}
+
 @mvbook { vernadsky1934problemy1,
   series = {Проблемы биогеохимии},
   title = {Значение биогеохимии для изучения биосферы},
@@ -314,6 +378,23 @@
   url = {http://goraknig.org/estestvennye_nauki/?kniga=MTQ2MTQxNA__},
   language = {russian},
   hyphenation = {russian},
+}
+
+@mvbook { vernadsky1936istoriya-v2p1-3,
+  author =	{Владимир Иванович Вернадский},
+  maintitle =	{История минералов земной коры},
+  userd =	{History of the Minerals of the Earth's Crust},
+  volume =	{2, Ч.~1},
+  booktitle =	{История природных вод},
+  usera =	{History of Natural Waters},
+  location =	{Л.},
+  publisher =	{ОНТИ Химтеоретиздат},
+  year =	{1936},
+  number =	{3},
+  hyphenation =	{russian},
+  language =	{russian},
+  url =		{http://www.geolcom.ru/lib/gidrogeologiya/istoriya-mineralov-zemnoi-kory-t-ii-istoriya-prirodnykh-vod-vernadskii-vi.html},
+  urldate =	{2012-07-29},
 }
 
 @mvbook { vernadsky1939problemy2,
@@ -412,6 +493,11 @@
   location = 	 {Москва},
   pagetotal = 	 {422},
   hyphenation =	 {russian},
+}
+
+@inbook { vernadsky1960sochineniya-istoriya,
+  crossref	= {vernadsky1959sochineniya-v4},
+  pages		= {85},
 }
 
 @mvbook { vernadsky1960sochineniya-v5,
