--- a/tex/foreword-yanshin.tex
+++ b/tex/foreword-yanshin.tex
@@ -201,4 +201,76 @@ their global extraction and refining, communicates information about the direct
 and indirect influence of human activity on the formation and distribution of
 one or another mineral or chemical compound (for example, hydrogen sulphide).
 
+V.~I.\ Vernadsky published \rtitle{The History of Natural
+Waters},\footnoteRus{\rtitle{Историю природных вод}} which he himself viewed as
+the second volume of the \rtitle{History of Minerals of the Earth's
+Crust},\footnoteRus{\rtitle{Истории минералов земной коры}} in two books in
+1933, and 1934.\footnoteTransl{
+	\Ie\ \refsmartcites{vernadsky1933istoriya-v2p1-1,
+	vernadsky1934istoriya-v2p1-2}.  The third book of the series, published
+	in 1936, is \refcite{vernadsky1936istoriya-v2p1-3}.
+}  He dedicates more than a few pages to the conscious, and unconscious
+influence of mankind on the geographical distribution, and on the composition
+of all waters on the Earth in this work.  Vernadsky had concluded even then
+that
+\begin{quote}
+  the pristine rivers are quickly disappearing, or have disappeared, and have
+  been replaced by a new type of formation, new waters, which had not existed
+  earlier.  A transformation of the natural waters, and the simultaneous
+  creation of new cultural rivers, lakes, reservoirs, coastal sea formations,
+  soil solutions is going on on the vast territory of Eurasia, and in the last
+  century also in America and in Australia---in the whole biosphere.
+  
+  This process reaches inward, changes the mode of the interstitial
+  waters\footnoteRus{режим пластовых вод} of the biosphere and stratisphere.
+  The transformation of vadose water---ground
+  water\footnoteRus{верховодок---вод грунтовых} has been going on for millenia,
+  then started the transformation of interstitial artesian
+  waters\footnoteRus{вод пластовых напорных} by boring and ore mining.  Now its
+  effect reaches more than two kilometers below the Earth's surface.
+  
+  The old species of surface, interstitial waters, soil waters, and
+  springs\footnoteRus{старые виды поверхностных, пластовых вод, вод почв и
+  источников} are disappearing and changing throughout the whole biosphere, new
+  cultural waters are emerging.\footcite{vernadsky1960sochineniya-istoriya}
+\end{quote}
+
+Parallel to the study of the influence of mankind's activity on the changing of
+Earth's nature, V.~I.\ Vernadsky began developing the study of the
+biosphere---that envelope of the Earth, in which `living matter' is
+concentrated---already in 1914--1916.  He didn't like the unnecessary coinage
+of words, the creation of new terms, but had magnificent knowledge of all world
+scientific literature, and employed its terminology extensively.  Such was the
+case with the term `biosphere'.  It was first used by the French scientist
+Jean-Baptiste Lamarck\footnoteRus{
+	Жаном Батистом Ламарком, a.k.a.\ Жан Батист Пьер Антуан де Моне Ламарк
+	(Jean-Baptiste Pierre Antoine de Monet, Chevalier de Lamarck).
+} in a work on hidrogeology to refer to the complex of living organisms
+inhabiting the globe, already in 1804.\footnoteTransl{
+	From what was available on the Internet, it seems that the reference is
+	to Lamarck's 1802 \btcite{lamarck1802hydrogeologie} where, in the last
+	but one paragraph of the foreword, Lamarck seems to say that a good
+	physics of the Earth requires studying three aspects of it, which share
+	the same physical body: the atmosphere (meteorology), the Earth's crust
+	(hydrogeology), and that of living bodies (biology).  The name
+	`biosphere', however, does not seem to be used there.
+}  The Austrian geologist Eduard Sueß,\footnoteRus{Эдуард Зюсс} and the German
+scientist Johannes Walther\footnoteRus{Иоган Вальтер} used it at the end of the
+$19^\mathrm{th}$ c., again with a meaning similar to Lamarck's concept.  V.~I.\ 
+Vernadsky introduced a completely different, far deeper meaning to this term.
+He introduced the term `living matter' for the complex of living organisms
+inhabiting the Earth, but called biosphere that environment in which this
+living matter is located, \ie\ the whole water envelope of the Earth, since
+living organisms exist at even the greatest depths of the world ocean, the
+lower part of the atmosphere, where insects, birds, and people fly, as well as
+the top part of the solid envelope of the Earth---the lithosphere, where living
+bacteria can be encountered in underground waters at depths on the order of
+$2\,\mathrm{km}$, and man has now penetrated to even greater depths, exceeding
+$3\,\mathrm{km}$, with his shafts in the regions of gold deposits in India,
+South Africa, and Brazil.  There is a `film of life',\footnoteRus{пленка жизни}
+where the concentration of living matter is maximum, in the biosphere.  This is
+the land surface, the soils, and the top layers of the world ocean's waters.
+The amount of living matter in the biosphere above and below it rapidly
+diminishes.
+
 . . .
